# environmental-sensing

./: .gitignore  README.rst  pyproject.toml
environmental_sensing/: cli.py  env_sensor.py  mqtt_client.py
tests/: test_environmental_sensing.py
